--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
@@ -23,7 +23,6 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <None Remove="cshtml5.extensions.kendoui.grid\scripts\jquery.min.js" />
     <None Remove="EmptyOpenSilverMigrationApplication.csproj.vspscc" />
     <None Remove="MyTemplate_rename_me_after_export.vstemplate" />
     <None Remove="Other\Styles.xaml" />
@@ -40,7 +39,9 @@
     <None Remove="Samples\Broken\Broken.xaml" />
     <None Remove="Samples\InProgress\RadComboBox\RadComboBox_Demo.xaml" />
     <None Remove="Samples\InProgress\RadDocking\RadDocking_Demo.xaml" />
-    <None Remove="Samples\InProgress\RadGridView\RadGridView_Demo.xaml" />
+    <None Remove="Samples\Broken\RadGridView\RadGridView_Demo.xaml" />
+    <None Remove="Samples\SupportedViaKendoUI\RadGridViewViaKendoUI\RadGridViewViaKendoUI_Demo.xaml" />
+    <None Remove="Samples\SupportedViaKendoUI\SupportedViaKendoUI.xaml" />
     <None Remove="Samples\Supported\RadDockPanel\RadDockPanel_Demo.xaml" />
     <None Remove="Samples\InProgress\RadMenu\RadMenu_Demo.xaml" />
     <None Remove="Samples\InProgress\RadRibbonView\RadRibbonView_Demo.xaml" />
@@ -65,19 +66,18 @@
     <None Remove="Samples\InProgress\RadWindow\RadWindow_demo.xaml" />
     <None Remove="Samples\Supported\Supported.xaml" />
     <None Remove="Samples\Welcome.xaml" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\scripts\kendo.all.min.js" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\images\kendoui.ttf" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\images\kendoui.woff" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\kendo.common-material.min.css" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\kendo.material.min.css" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\kendo.material.mobile.min.css" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\kendo.rtl.min.css" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\Material\loading-image.gif" />
-    <None Remove="Third_Party_Resources\Telerik_KendoUI\styles\Material\sprite.png" />
+    <None Remove="Libs\KendoUI\scripts\kendo.all.min.js" />
+    <None Remove="Libs\KendoUI\styles\images\kendoui.ttf" />
+    <None Remove="Libs\KendoUI\styles\images\kendoui.woff" />
+    <None Remove="Libs\KendoUI\styles\kendo.common-material.min.css" />
+    <None Remove="Libs\KendoUI\styles\kendo.material.min.css" />
+    <None Remove="Libs\KendoUI\styles\kendo.material.mobile.min.css" />
+    <None Remove="Libs\KendoUI\styles\kendo.rtl.min.css" />
+    <None Remove="Libs\KendoUI\styles\Material\loading-image.gif" />
+    <None Remove="Libs\KendoUI\styles\Material\sprite.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="cshtml5.extensions.kendoui.grid\scripts\jquery.min.js" />
     <Content Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -100,6 +100,9 @@
     <Content Include="Other\Themes\Telerik.Windows.Controls.Docking.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
+    <Content Include="Other\Themes\Telerik.Windows.Controls.GridView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
     <Content Include="Other\Themes\Telerik.Windows.Controls.Input.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
@@ -115,13 +118,20 @@
     <Content Include="Samples\Broken\Broken.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
-    <Content Include="Samples\InProgress\RadGridView\RadGridView_Demo.xaml">
+    <Content Include="Samples\Broken\RadGridView\RadGridView_Demo.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
     <Content Include="Samples\InProgress\RadComboBox\RadComboBox_Demo.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
     <Content Include="Samples\InProgress\RadDocking\RadDocking_Demo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
+    <Content Include="Samples\SupportedViaKendoUI\RadGridViewViaKendoUI\RadGridViewViaKendoUI_Demo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
+    <Content Include="Samples\SupportedViaKendoUI\SupportedViaKendoUI.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
     <Content Include="Samples\Supported\RadDockPanel\RadDockPanel_Demo.xaml">
@@ -196,15 +206,16 @@
     <Content Include="Samples\Welcome.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\scripts\kendo.all.min.js" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\images\kendoui.ttf" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\images\kendoui.woff" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\kendo.common-material.min.css" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\kendo.material.min.css" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\kendo.material.mobile.min.css" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\kendo.rtl.min.css" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\Material\loading-image.gif" />
-    <Content Include="Third_Party_Resources\Telerik_KendoUI\styles\Material\sprite.png" />
+    <Content Include="Libs\KendoUI\scripts\jquery.min.js" />
+    <Content Include="Libs\KendoUI\scripts\kendo.all.min.js" />
+    <Content Include="Libs\KendoUI\styles\images\kendoui.ttf" />
+    <Content Include="Libs\KendoUI\styles\images\kendoui.woff" />
+    <Content Include="Libs\KendoUI\styles\kendo.common-material.min.css" />
+    <Content Include="Libs\KendoUI\styles\kendo.material.min.css" />
+    <Content Include="Libs\KendoUI\styles\kendo.material.mobile.min.css" />
+    <Content Include="Libs\KendoUI\styles\kendo.rtl.min.css" />
+    <Content Include="Libs\KendoUI\styles\Material\loading-image.gif" />
+    <Content Include="Libs\KendoUI\styles\Material\sprite.png" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -222,7 +233,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenSilver.Compatibility.TelerikUI" Version="0.1.0-alpha-001" />
-    <PackageReference Include="OpenSilver.WorkInProgress" Version="1.0.0-alpha-006" />
+    <PackageReference Include="OpenSilver.WorkInProgress" Version="1.0.0-alpha-008" />
   </ItemGroup>
 
 </Project>
