Add some tests on TileView and TabControl.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
@@ -37,6 +37,7 @@
     <None Remove="Other\Themes\Telerik.windows.controls.RibbonView.xaml" />
     <None Remove="Other\Themes\Windows.Control.xaml" />
     <None Remove="Samples\Broken\Broken.xaml" />
+    <None Remove="Samples\Broken\RadTileView\RadTileView_Demo.xaml" />
     <None Remove="Samples\InProgress\RadComboBox\RadComboBox_Demo.xaml" />
     <None Remove="Samples\InProgress\RadDocking\RadDocking_Demo.xaml" />
     <None Remove="Samples\Broken\RadGridView\RadGridView_Demo.xaml" />
@@ -119,6 +120,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Content>
     <Content Include="Samples\Broken\RadGridView\RadGridView_Demo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
+    <Content Include="Samples\Broken\RadTileView\RadTileView_Demo.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
     <Content Include="Samples\InProgress\RadComboBox\RadComboBox_Demo.xaml">
@@ -206,7 +210,6 @@
     <Content Include="Samples\Welcome.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Content>
-    <Content Include="Libs\KendoUI\scripts\jquery.min.js" />
     <Content Include="Libs\KendoUI\scripts\kendo.all.min.js" />
     <Content Include="Libs\KendoUI\styles\images\kendoui.ttf" />
     <Content Include="Libs\KendoUI\styles\images\kendoui.woff" />
